Implementando Tela de Ajuda

--- a/Tela de ajuda.html
+++ b/Tela de ajuda.html
@@ -3,9 +3,34 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Ajuda</title>
 </head>
 <body>
-    
+    <h1>Informações</h1>
+
+    <p>
+        Nossa sistema de ajuda se baseia em suporte
+        online e saque de atendimento para qualque tipo
+        de problema e de acordo com a sua necessidade.
+    </p>
+    <p>Atendimento online das 9 ás 22h.</p>
+
+    <button name="Chat online" style="font-weight: bold; width:200px; height:100px">CHAT ONLINE</button><br /><br />
+
+    <button name="Desativar Conta" style="width:200px; height:40px">DESATIVAR CONTA</button>
+
+    <p>E-mail para duvidas e problemas.</p>
+    <p>DPfinaciamentos@hotmail.com</p>
+
+    <p>
+        Telefones para contato
+        Horario de atendimento das 9 ás 22h.
+    </p>
+    <p>(11)4002-8922</p>
+    <p>(11)4002-8923</p>
+
+    <button name="Voltar" style="width:200px; height:40px">VOLTAR</button>
+
+
 </body>
 </html>
