Implementando tela de quitar financiamento

--- a/Tela de quitar financiamento.html
+++ b/Tela de quitar financiamento.html
@@ -2,9 +2,24 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Financiamento</title>
 </head>
 <body>
+    <h1>Quitar Financiamento</h1>
+
+    <p> Texto com informações mostrando o valor restante a se pagar no financiamento!...</p>
+    <!--aqui entrara os valores quando criar o código-->
+    <p>Mostrando também o deconto gerado em cima do valor restante do financiamento.</p>
+    <!--Aqui o desconto-->
+    <p>Termos e condições</p>
+    <!--Pensar em como por-->
+
+    <input type="checkbox" id="Checkbox" name="Checkbox" required />
+    <label for="checkbox">Aceito termos e condições</label><br /><br />
+
+    <input type="button" value="Gerar Boleto" />
+    <br /><br />
+    <input type="button" value="Imprimir Boleto" />
 
 </body>
 </html>
