Implementando tela de recuperação

--- a/Tela de recuperação.html
+++ b/Tela de recuperação.html
@@ -2,9 +2,20 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Recuperar</title>
 </head>
 <body>
+    <h1>Recuperação de senha</h1>
 
+    <p>Um link para alteração de senha será enviado para seu e-mail dentro de 10 segundos a 10 minutos.</p>
+
+    <p> insira o seu e-mail abaixo para recuperar a senha de acesso da sua conta.</p>
+
+    <form name="verificacao" action="#" method="get">
+        <label for="txtEmail">E-mail</label><br />
+        <input type="text" id="txtEmail" name="txtEmail" placeholder="Ex: DPfinanciamentos@hotmail.com" required /><br /><br />
+
+        <input type="submit" value="Enviar" />
+    </form>
 </body>
 </html>
