--- a/Tela de verificação de 2 etapas.html
+++ b/Tela de verificação de 2 etapas.html
@@ -2,9 +2,23 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Vericação</title>
 </head>
 <body>
+    <h1>Verificação de 2 etapas</h1>
 
+    <p>Um codigo será enviado dentro de 10 segundos a 10 minutos para a sua caixa de e-mail.</p>
+
+    <p> insira o código abaixo para continuar com o acesso a sua conta.</p>
+
+    <form name="verificacao" action="#" method="get">
+        <label for="txtCodigoDeSeguranca">Código de Segurança</label><br />
+        <input type="text" id="txtCodigoDeSeguranca" name="txtCodigoDeSeguranca" placeholder="Ex: K7Y8718HJ213" required /><br /><br />
+
+        <input type="checkbox" id="Checkbox" name="Checkbox" required />
+        <label for="checkbox">Não sou um robô</label><br /><br />
+
+        <input type="submit" value="Entrar" />
+    </form>
 </body>
 </html>
