Implementacao de antecipacao de boleto

--- a/Tela antecipar boleto.html
+++ b/Tela antecipar boleto.html
@@ -2,9 +2,21 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Antecipar Boleto</title>
 </head>
 <body>
+    <h1>Antecipar Boleto</h1>
+
+    <label for="txtParcelas">Parcelas</label><br />
+
+    <input type="number" id="txtParcelas" name="txtParcelas" placeholder="Número de parcelas" /><br />
+
+    <input type="button" value="Gerar Boleto" /><br />
+    <br />
+
+    <textarea>Boleto..</textarea><br />
+
+    <input type="button" value="Imprimir Boleto" /><br />
 
 </body>
 </html>
