Implementando renegociacao de boletos

--- a/Tela renegociação de boleto.html
+++ b/Tela renegociação de boleto.html
@@ -2,9 +2,23 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Renegociar Boleto</title>
+
 </head>
 <body>
+    <h1>Renegociar Boleto</h1>
 
+
+    <textarea>Texto Informativo</textarea> <br />
+    <br />
+    <textarea>Termos e Condições</textarea> <br />
+    <br />
+    <input type="checkbox" name="condicao" value="Aceito" required /> Aceito
+    <input type="button" value="Voltar" /> <br />
+    <br />
+    <input type="button" value="Gerar Boleto" /><br />
+
+    <textarea>Boleto..</textarea><br />
+    <input type="button" value="Imprimir Boleto" />
 </body>
 </html>
