uplod tela de boleto

--- a/Tela de boleto.html
+++ b/Tela de boleto.html
@@ -1,10 +1,32 @@
 ﻿<!DOCTYPE html>
-<html>
+
+<html lang="pt-br">
+
 <head>
-    <meta charset="utf-8" />
-    <title></title>
+
+    <meta charset="utf-8">
+
+    <link rel="stylesheet" type="text/css" href="Style.css"> <!-- Vai chamar o arquivo Style.css -->
+
+    <title> Tela boleto </title>
+
 </head>
-<body>
+
+<body
+
+<br>
+<br>
+<br>
+<br>
+
+<p> Boleto... </p> <br>
+
+<h4> Imprimir boleto </h4>
+
+<h4> Antecipar </h4>
+<h4> Renegociação </h4>
+
 
 </body>
+
 </html>
