Uplod Tela direcionada a função boleto

--- a/Tela direcionada a função do boleto.html
+++ b/Tela direcionada a função do boleto.html
@@ -1,10 +1,34 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="pt-br">
+
 <head>
-    <meta charset="utf-8" />
-    <title></title>
+
+    <meta charset="utf-8">
+    <title>Tela direcionada da função Boleto</title>
+
+    <!-- Vai chamar a o arquivo Style.css -->
+
+    <link rel="stylesheet" type="text/css" href="Style.css">
+
 </head>
+
 <body>
 
+    <ul>
+        <li><a href="">Mensalidade</a></li>
+        <li><a href="">Antecipação</a></li>
+        <li><a href="">Renegociação</a></li>
+        <li><a href="">Quitar dívida</a></li>
+    </ul>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <p> Texto contendo informaçoes... </p>
+
+
 </body>
+
 </html>
