Implementando Tela de Simulacao

--- a/Tela de simulação.html
+++ b/Tela de simulação.html
@@ -2,9 +2,23 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Tela de Simulação</title>
 </head>
+
 <body>
+
+    <input type="text" id="txtRenda" name="txtRenda" placeholder="Renda" required /><br />
+    <br />
+    <input type="text" id="txtVFinanciamento" name="txtVFinanciamento" placeholder="Valor do financiamento" required />
+
+    <input type="button" name="txtSimular" value="Simular" /> <br />
+    <br />
+    <input type="text" id="txtParcelas" name="txtParcelas" placeholder="Parcelas" required /><br />
+    <br />
+
+    <textarea>Texto simulando o financiamento... </textarea><br />
+    <input type="button" name="txtSolicitar" value="Solicitar" />
+    <input type="button" name="txtVoltar" value="Voltar" />
 
 </body>
 </html>
