Implementando Tela do Usuario

--- a/Tela do usuario.html
+++ b/Tela do usuario.html
@@ -2,9 +2,21 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Tela do Usuário</title>
 </head>
+
 <body>
+
+    <label>Bem Vindo, Usuário! </label><br />
+    <br />
+
+    <input type="button" name="txtFinanciamento" value="Fianciamento" />
+    <input type="button" name="txtAcompanhamento" value="Acompanhamento" />
+    <select id="Ajuda" name="Ajuda">
+        <option value="ajuda">Ajuda</option>
+    </select><br />
+    <br />
+    <textarea>Texto Informativo...</textarea>
 
 </body>
 </html>
