--- a/Tela de cadastro.html
+++ b/Tela de cadastro.html
@@ -1,10 +1,90 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
+<!DOCTYPE html>
+
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head runat="server">
+    <title>Cadastro</title>
+     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="styles/style_cad.css" />
+
 </head>
 <body>
+    <form id="formCadastro" runat="server">
+        <h1>Cadastro de Clientes</h1>
+            <div class="input-cadastro">
+                    <label for="cadastro-nome">Nome</label>
+                    <input type="Nome" id="cadastro-nome" placeholder="nome" required/><br /></div>
+                
+                <div class="input-cadastro">
+                    <label for="cadastro-sobrenome">Sobrenome</label>
+                    <input type="sobrenome" id="cadastro-sobrenome"  placeholder="sobrenome" required/>
+                 </div>
+                <div class="input-cadastro">
+                    <label for="cadastro-dtn">Data de Nascimento</label>
+                    <input type="data de nascimento" id="cadastro-dtn"  placeholder="dtn" required/>
 
+                <div class="input-cadastro">
+                    <label for="cadastro-CPF">CPF</label>
+                    <input type="CPF" id="cadastro-CPF"  placeholder="CPF" required/>
+                 </div>
+                
+                <div class="input-cadastro">
+                        <label for="cadastro-Email">Email</label>
+                        <input type="Email" id="cadastro-Email"  placeholder="Email" required/>
+                </div>
+
+                <div class="input-cadastro">
+                        <label for="cadastro-Telefone">Telefone</label>
+                        <input type="Telefone" id="cadastro-Telefone"  placeholder="Telefone/Celular" required/>
+                </div>
+
+                <div class="input-cadastro">
+                        <label for="cadastro-Password">Password</label>
+                        <input type="Password" id="cadastro-Password"  placeholder="Password" required/>
+                </div>
+
+                <div class="input-cadastro">
+                        <label for="cadastro-ConfirmaPassword">Password</label>
+                        <input type="ConfirmaPassword" id="cadastro-ConfirmaPassword"  placeholder="ConfirmaPassword" required/>
+                </div>
+
+                <div class="input-cadastro">
+                        <label for="cadastro-CEP</label>
+                        <input type="CEP" id="cadastro-CEP"  placeholder="CEP" required/>
+                </div>
+
+                <div class="input-cadastro">
+                        <label for="cadastro-Rua</label>
+                        <input type="Rua" id="cadastro-Rua"  placeholder="Rua" required/>
+                </div>
+
+                <div class="input-cadastro">
+                        <label for="cadastro-Número</label>
+                        <input type="Número" id="cadastro-Número"  placeholder="Número" required/>
+                </div>
+
+                <div class="input-cadastro">
+                        <label for="cadastro-Bairro</label>
+                        <input type="Bairro" id="cadastro-Bairro"  placeholder="Bairro" required/>
+                </div>
+
+
+                <div class="input-cadastro">
+                        <label for="cadastro-Cidade</label>
+                        <input type="Cidade" id="cadastro-Cidade"  placeholder="Cidade" required/>
+                </div>
+
+                <div class="input-cadastro">
+                        <label for="cadastro-UF</label>
+                        <input type="UF" id="cadastro-UF"  placeholder="UF" required/>
+                </div>
+
+                    <textarea id="Termos de Serviço" name="Termos" rows="4" cols="2">
+                        bla bla bla
+                    </textarea>
+
+        </div>
+    </form>
 </body>
 </html>
