--- a/Tela de login.html
+++ b/Tela de login.html
@@ -1,10 +1,42 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head runat="server"> 
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>DP Serviços Financeiros</title>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <link rel="stylesheet" href="styles/Styledp.css" />
+
+
 </head>
 <body>
+    <section class="form-section">
+        <h1>Bem Vindo a DP Financiamentos</h1>
+        <h2>Faça seu login</h2>
 
+        <div class="form-wrapper">
+            <form action="#" method="post">
+                <div class="input-block">
+                    <label for="login-email">Email</label>
+                    <input type="email" id="login-email" placeholder="e-mail" required/><br />
+                </div>
+                <div class="input-block">
+                    <label for="login-password">Password</label>
+                    <input type="password" id="login-password"  placeholder="password" required/>
+                </div>
+                <div>
+                    <div class="g-recaptcha" data-sitekey="6LfrLM0ZAAAAAGy5FQ2F_ftPd4dv5j1UNUeTRfXz"></div>
+                    <br />
+                   
+
+                </div>
+                <button type="submit" class="btn-login">Login</button>
+            </form>
+        </div>
+    </section>
+
+
+    <script src="script.js"></script>
 </body>
 </html>
