Update Tela menu inicial.html

--- a/Tela menu inicial.html
+++ b/Tela menu inicial.html
@@ -1,10 +1,41 @@
-﻿<!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
-    <meta charset="utf-8" />
-    <title></title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>DP Serviços Financeiros</title>
+    <link rel="stylesheet" href="styles/Styledp.css" />
 </head>
 <body>
+    <section class="form-section2">
+        <h1>Menu Inicial</h1>
 
+        <div class="form-wrapper">
+            <form action="">
+                <div class="form-section">
+                    <label for="story">Realize seu sonhos:</label>
+                    <textarea id="story" name="story" rows="4" cols="3">
+                        Resolvemos todas as suas dividas !!
+                        Venha de DP FINANCIAMENTOS, aqui te damos
+                        o menor juros do mercado em financiamentos,
+                        além disso você só paga a primeira parcela 60
+                        dias após o financiamento !!
+                        Fazemos a melhor simulação para caber no seu
+                        bolso de acordo com a sua necessidade!
+
+                    </textarea></fieldset>
+
+                    <br><br>
+                </div>
+                <div class="input-block">
+                    <button type="submit" class="btn-login">Login</button>
+                </div>
+                <button type="submit" class="btn-cadastro">Cadastro</button>
+            </form>
+        </div>
+    </section>
+
+    <script src="script.js"></script>
 </body>
 </html>
