--- a/Tela acompanhamento.html
+++ b/Tela acompanhamento.html
@@ -2,9 +2,40 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Acompanhamento</title>
 </head>
 <body>
+    <h1>Financiamento</h1>
+    <!--ATENÇÃO ESTA TUDO EM TEXTO DEPOIUS PASSAR PARA A MOEDA-->
+    <label for="txtFinanciamento">Financiamento</label><br />
+    <input type="text" id="txtFinanciamento" name="txtFinanciamento" placeholder="Aqui aparecerá o valor do financiamento" required /><br />
+    <label for="txtParcelas">Parcelas</label><br />
+    <input type="text" id="txtParcelas" name="txtParcelas" placeholder="Aqui aparecerá o número da parcela" required /><br />
+
+    <label for="dateInicial"></label>Data Inicial<br />
+    <input type="date" id="dateInicial" name="dateInicial" placeholder="Aqui aparecerá a data inicial" required /><br />
+    <label for="dateFinal">Data Final</label><br />
+    <input type="date" id="dateFinal" name="dateFinal" placeholder="Aqui aparecerá a data ginall" required /><br />
+
+    <label for="txtJuros">Juros</label><br />
+    <input type="text" id="txtJuros" name="txtJuros" placeholder="Aqui aparecerá o valor do juros" required /><br />
+    <label for="txtValorTotal">Valor Total</label><br />
+    <input type="text" id="txtValorTotal" name="txtValorTotal" placeholder="Aqui aparecerá o valor total" required /><br />
+
+    <label for="txtValorParcela">Valor da Parcela</label><br />
+    <input type="text" id="txtValorParcela" name="txtValorParcela" placeholder="Aqui aparecerá o valor da parcela" required /><br />
+    <br /><br />
+    <label for="txt">situação do Financiamento Ex: Análise</label><br />
+    <!--situação do Financiamento Ex: Análise-->
+    <br /><br />
+    <label for="txt">Status do financiamento Ex: Pagando</label><br />
+    <!--Status do financiamento Ex: Pagando-->
+    <br /><br />
+    <label for="dateSolicitado">Solicitado</label><br />
+    <input type="date" id="dateSolicitado" name="dateSolicitado" placeholder="Aqui aparecerá a data de solicitação do boleto" required /><br />
+    <!-- VER DEPOIS COMO LINKAR UMA PÁGINA SEM SAIR DA OUTRA-->
+    <a href="Tela de exibir mais.html">Exibir Mais</a>
+
 
 </body>
 </html>
