--- a/Tela de exibir mais.html
+++ b/Tela de exibir mais.html
@@ -2,9 +2,42 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Acompanhamento</title>
 </head>
 <body>
+    <label for="dateVencimento">Vencimento</label><br />
+    <input type="date" id="dateVencimento" name="dateVencimento" placeholder="Aqui aparecerá a data de vencimento do boleto" required /><br />
+    <label for="txtNome">Nome</label><br />
+    <input type="text" id="txtNome" name="txtNome" placeholder="Aqui aparecerá o nome do cliente que solicitou o boleto" required /><br />
+
+    <label for="txtCpf">CPF</label><br />
+    <input type="text" id="txtCpf" name="txtCpf" placeholder="Aqui aparecerá o valor do financiamento" required /><br />
+    <label for="txtEmail">E-mail</label><br />
+    <input type="email" id="txtEmail" name="txtEmail" placeholder="Aqui aparecerá o número da parcela" required /><br />
+    <label for="txtMoeda">Moeda</label><br />
+    <select id="txtMoeda" name="txtMoeda">
+        <option value="txtMoeda">Real</option>
+        <option value="txtMoeda">Dólar</option>
+        <option value="txtMoeda">Euro</option>
+        <option value="txtMoeda">BitCoin</option>
+        <br />
+        <br />
+        <label for="txtId">Id</label>
+        <br />
+        <input type="text" id="txtId" name="txtId" placeholder="Aqui aparecerá o valor do financiamento" required />
+        <br />
+        <label for="dateNascimento">Data de Nascimento</label>
+        <br />
+        <input type="date" id="dateNascimento" name="dateNascimento" placeholder="Aqui aparecerá o número da parcela" required />
+        <br />
+
+        <label for="txtTelefone">Telefone</label>
+        <br />
+        <input type="tel" id="txtTelefone" name="txtTelefone" placeholder="Aqui aparecerá o valor do financiamento" required />
+        <br />
+        <br />
+        <a href="tela acompanhamento.html">Exibir Menos</a>
+
 
 </body>
 </html>
