Implementando conexão com as telas de menu inicial, de ajuda, de simulação, direcionada a função do boleto, boleto e de renegociação de boleto

--- a/Tela de ajuda.html
+++ b/Tela de ajuda.html
@@ -30,6 +30,9 @@
     <p>(11)4002-8923</p>
 
     <button name="Voltar" style="width:200px; height:40px">VOLTAR</button>
+    <!--Não editei nada so adicionei a linha abaixo-->
+    <a href="Tela do usuario.html">Voltar</a>
+
 
 
 </body>
