--- a/Tela de simulação.html
+++ b/Tela de simulação.html
@@ -19,6 +19,8 @@
     <textarea>Texto simulando o financiamento... </textarea><br />
     <input type="button" name="txtSolicitar" value="Solicitar" />
     <input type="button" name="txtVoltar" value="Voltar" />
+    <!--Não editei nada so adicionei a linha abaixo-->
+    <a href="Tela do usuario.html">Voltar</a>
 
 </body>
 </html>
