--- a/Tela direcionada a função do boleto.html
+++ b/Tela direcionada a função do boleto.html
@@ -19,6 +19,12 @@
         <li><a href="">Antecipação</a></li>
         <li><a href="">Renegociação</a></li>
         <li><a href="">Quitar dívida</a></li>
+        <!--Não editei nada so adicionei a linha abaixo-->
+        <a href="Tela de boleto.html">Mensalidade</a>
+        <a href="Tela antecipar boleto.html">Antecipação</a>
+        <a href="Tela renegociação de boleto.html">Renegociação</a>
+        <a href="Tela de quitar financiamento.html">Quitar Divida</a>
+
     </ul>
     <br>
     <br>
