--- a/Tela menu inicial.html
+++ b/Tela menu inicial.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8" />
@@ -37,5 +37,8 @@
     </section>
 
     <script src="script.js"></script>
+    <!--Não editei nada so adicionei a linha abaixo-->
+    <a href="Tela de login.html">Login</a>
+    <a href="Tela de cadastro.html">Cadastrar</a>
 </body>
 </html>
