--- a/Tela renegociação de boleto.html
+++ b/Tela renegociação de boleto.html
@@ -20,5 +20,7 @@
 
     <textarea>Boleto..</textarea><br />
     <input type="button" value="Imprimir Boleto" />
+    <!--Não editei nada so adicionei a linha abaixo-->
+    <a href="Tela direcionada a função do boleto.html">Voltar</a>
 </body>
 </html>
