--- a/Tela de boleto.html
+++ b/Tela de boleto.html
@@ -25,6 +25,10 @@
 
 <h4> Antecipar </h4>
 <h4> Renegociação </h4>
+    <!--Não editei nada so adicionei a linha abaixo-->
+<a href="Tela antecipar boleto.html">Antecipar</a>
+<a href="Tela renegociação de boleto.html">Renegociação</a>
+
 
 
 </body>
