Primeiro commit projeto site web

--- a/Tela menu inicial.html
+++ b/Tela menu inicial.html
@@ -5,40 +5,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>DP Serviços Financeiros</title>
-    <link rel="stylesheet" href="styles/Styledp.css" />
+    <link href="styles/telasPag.css" type="text/css" rel="stylesheet" />
+
 </head>
 <body>
-    <section class="form-section2">
-        <h1>Menu Inicial</h1>
 
-        <div class="form-wrapper">
-            <form action="">
-                <div class="form-section">
-                    <label for="story">Realize seu sonhos:</label>
-                    <textarea id="story" name="story" rows="4" cols="3">
-                        Resolvemos todas as suas dividas !!
-                        Venha de DP FINANCIAMENTOS, aqui te damos
-                        o menor juros do mercado em financiamentos,
-                        além disso você só paga a primeira parcela 60
-                        dias após o financiamento !!
-                        Fazemos a melhor simulação para caber no seu
-                        bolso de acordo com a sua necessidade!
 
-                    </textarea></fieldset>
 
-                    <br><br>
-                </div>
-                <div class="input-block">
-                    <button type="submit" class="btn-login">Login</button>
-                </div>
-                <button type="submit" class="btn-cadastro">Cadastro</button>
-            </form>
+    <div class="topnav">
+
+        <a href="../Tela menu inicial.html"><img src="Images/WhatsApp Image 2020-10-18 at 19.39.33.jpeg" /> </a><br />
+        <br />
+        <a href="../Tela menu inicial.html">Home</a>
+        <a href="Tela de login.html">Login</a>
+        <a href="Tela de cadastro.html">Cadastre-se</a>
+        <a href="#">Contato</a><br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <h2 style="color: white">É possível fazer financiamentos sem burocracia e através de Bitcoins?</h2>
+    </div>
+
+
+    <img src="Images/financeira3.jpg" style="width:600px;height:450px;margin-left:0px;">
+    <br />
+    <div class="j">
+        <h1>Empresa</h1>
+    </div>
+    <div class="p">
+        <p>
+            Nós da DP Finaciamentos trazemos em nossa plataforma algo<br />
+            que vai ajudar você, a realizar os seus sonhos.<br />
+            Com a nova tecnologia blockchain seus dados e transações estarão<br />
+            mais seguros do que nunca.<br />
+            Gostou? Então o que está esperando?<br />
+            Dp Financiamentos, venha fazer parte do futuro!<br />
+        </p>
+    </div>
+
+    <div class="j">
+        <h2>Nossa Atuação</h2>
+    </div>
+    <div class="p">
+        <p>
+            Atuamos na revisão de juros abusivos, de modo a evitar que nossos<br />
+            clientes paguem juros e multas maiores do que a lei determina, bem como<br />
+            na prevenção da busca e apreensão de veículos, cujos contratos geralmente incluem<br />
+            valores exorbitantes e ilegais. ívida de cartão de crédito e dívidas de empréstimo são<br />
+            outros serviços prestados pela equipe da Novo Ideal Consultoria, que visa proporcionar<br />
+            as melhores condições para a quitação da dívida, com valores que estejam dentro das<br />
+            possibilidades de cada cliente e uma economia considerável graças ao revisional de juros,<br />
+            multas e outras cobranças indevidas.
+        </p>
+    </div>
+    <br />
+    <br />
+    <br />
+    <br />
+
+    
+          
+
+        <br />
+        <br />
+        <br />
+
+
+
+        <div class="footer">
+            <p style="color: gray">DPFinanciamentos@hotmail.com </p><br />
+            <p style="color: gray">(11) 123456789 </p>
         </div>
-    </section>
 
-    <script src="script.js"></script>
-    <!--Não editei nada so adicionei a linha abaixo-->
-    <a href="Tela de login.html">Login</a>
-    <a href="Tela de cadastro.html">Cadastrar</a>
+
+
+
+
+
 </body>
 </html>
