Introdução de Estilo CSS nas Páginas

--- a/Tela acompanhamento.html
+++ b/Tela acompanhamento.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <title>Acompanhamento</title>
+    <link href="styles/telasPag.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
+    
     <h1>Financiamento</h1>
     <!--ATENÇÃO ESTA TUDO EM TEXTO DEPOIUS PASSAR PARA A MOEDA-->
     <label for="txtFinanciamento">Financiamento</label><br />
