--- a/Tela de alteração de senha.html
+++ b/Tela de alteração de senha.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Alteração de Senha</title>
+    <link href="styles/telasPag.css" type="text/css" rel="stylesheet" />
 
 
 </head>
