--- a/Tela de boleto.html
+++ b/Tela de boleto.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8">
 
     <link rel="stylesheet" type="text/css" href="Style.css"> <!-- Vai chamar o arquivo Style.css -->
+    <link href="styles/telasPag.css" type="text/css" rel="stylesheet" />
 
     <title> Tela boleto </title>
 
