--- a/Tela de exibir mais.html
+++ b/Tela de exibir mais.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Acompanhamento</title>
+    <link href="styles/telasPag.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
     <label for="dateVencimento">Vencimento</label><br />
