--- a/Tela de recuperação.html
+++ b/Tela de recuperação.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Recuperar</title>
+    <link href="styles/telasPag.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
     <h1>Recuperação de senha</h1>
