--- a/Tela de verificação de 2 etapas.html
+++ b/Tela de verificação de 2 etapas.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Vericação</title>
+    <link href="styles/telasPag.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
     <h1>Verificação de 2 etapas</h1>
