--- a/Tela direcionada a função do boleto.html
+++ b/Tela direcionada a função do boleto.html
@@ -9,6 +9,7 @@
     <!-- Vai chamar a o arquivo Style.css -->
 
     <link rel="stylesheet" type="text/css" href="Style.css">
+    <link href="styles/telasPag.css" type="text/css" rel="stylesheet" />
 
 </head>
 
