--- a/Tela de ajuda.html
+++ b/Tela de ajuda.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Ajuda</title>
+    <link href="styles/telasPag.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
     <h1>Informações</h1>
