--- a/Tela de simulação.html
+++ b/Tela de simulação.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Tela de Simulação</title>
+    <link href="styles/telasPag.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
