--- a/Tela renegociação de boleto.html
+++ b/Tela renegociação de boleto.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Renegociar Boleto</title>
+    <link href="styles/telasPag.css" type="text/css" rel="stylesheet" />
 
 </head>
 <body>
