--- a/Tela de cadastro.html
+++ b/Tela de cadastro.html
@@ -38,49 +38,49 @@
         <h1>Cadastro</h1>
 
         <label for="cadastro-nome">Nome</label>
-        <input type="text" name="cadastro-Nome" id="cadastro-Nome" placeholder="Nome" required /><br />
+        <input type="text" name="cadastro-Nome" id="cadastro-Nome" required /><br />
 
         <label for="cadastro-sobrenome">Sobrenome</label>
-        <input type="text" name="cadastro-Sobrenome" id="cadastro-Sobrenome" placeholder="Sobrenome" required />
+        <input type="text" name="cadastro-Sobrenome" id="cadastro-Sobrenome" required />
 
         <label for="cadastro-dtn">Data de Nascimento</label>
-        <input type="date" name="cadastro-Dtn" id="cadastro-Dtn" placeholder="data de nascimento" required />
+        <input type="date" name="cadastro-Dtn" id="cadastro-Dtn" required />
 
         <label for="cadastro-CPF">CPF/CNPJ</label>
-        <input type="text" name="cadastro-CPF" id="cadastro-CPF" placeholder="CPF" required />
+        <input type="text" name="cadastro-CPF" id="cadastro-CPF" required />
 
         <label for="cadastro-Email">Email</label>
-        <input type="Email" name="cadastro-Email" id="cadastro-Email" placeholder="Email" required />
+        <input type="Email" name="cadastro-Email" id="cadastro-Email" required />
 
         <label for="cadastro-Telefone">Telefone</label>
-        <input type="text" name="cadastro-Telefone" id="cadastro-Telefone" placeholder="Telefone/Celular" required />
+        <input type="text" name="cadastro-Telefone" id="cadastro-Telefone" required />
 
         <label for="cadastro-Password">Password</label>
-        <input type="password" name="cadastro-Password" id="cadastro-Password" placeholder="Password" required />
+        <input type="password" name="cadastro-Password" id="cadastro-Password" required />
 
         <label for="cadastro-ConfirmaPassword">Password</label>
-        <input type="password" name="cadastro-ConfirmaPassword" id="cadastro-ConfirmaPassword" placeholder="ConfirmaPassword" required />
+        <input type="password" name="cadastro-ConfirmaPassword" id="cadastro-ConfirmaPassword" required />
 
         <label for="cadastro-CEP">CEP</label>
-        <input type="text" name="cadastro-CEP" id="cadastro-CEP" placeholder="CEP" required />
+        <input type="text" name="cadastro-CEP" id="cadastro-CEP" required />
 
         <label for="cadastro-Endereco">Endereço</label>
-        <input type="text" name="cadastro-Endereco" id="cadastro-Endereco" placeholder="Endereço" required />
+        <input type="text" name="cadastro-Endereco" id="cadastro-Endereco" required />
 
         <label for="cadastro-Bairro">Bairro</label>
-        <input type="text" name="cadastro-Bairro" id="cadastro-Bairro" placeholder="Bairro" required />
+        <input type="text" name="cadastro-Bairro" id="cadastro-Bairro" required />
 
         <label for="cadastro-Cidade">Cidade</label>
-        <input type="text" name="cadastro-Cidade" id="cadastro-Cidade" placeholder="Cidade" required />
+        <input type="text" name="cadastro-Cidade" id="cadastro-Cidade" required />
 
         <label for="cadastro-UF">Estado</label>
-        <input type="text" name="cadastro-Estado" id="cadastro-Estado" placeholder="Estado" required />
+        <input type="text" name="cadastro-Estado" id="cadastro-Estado" required />
         <br />
         <br />
         <br />
         
-        <button class="button" type="submit">Voltar</button>
-        <button class="button" type="submit">Confirmar</button>
+        <button style="width: 190px" class="button" type="submit">Voltar</button>
+        <button style="width: 200px" class="button" type="submit">Confirmar</button>
        
 
 
