--- a/Tela menu inicial.html
+++ b/Tela menu inicial.html
@@ -18,8 +18,8 @@
         <br />
         <a href="../Tela menu inicial.html">Home</a>
         <a href="Tela de login.html">Login</a>
-        <a href="Tela de cadastro.html">Cadastre-se</a>
-        <a href="#">Contato</a><br />
+        <a href="Tela de cadastro.html">Cadastre-se</a><br />
+
         <br />
         <br />
         <br />
@@ -118,20 +118,59 @@
 
 
     <div class="img2">
-        <img src="Images/imagens_proejto.jpg" style="width:520px;height:370px;margin-right:15px;" />
+        <img src="Images/imagens_proejto.jpg" style="width:520px;height:370px;margin-right:15px;" /><br />
     </div>
- 
-    
 
-    <br />
-    <br />
-    <br />
-    <br />
+
+    <div class="p" style="text-align: center; padding: 50px">
+        <p>
+            A DP Financiamentos garante aos seus<br />
+            clientes as mais diversas possibilidades<br />
+            de realizar um financiamento seguro<br />
+            e sem burocracia!<br /><br />
+            Cadastre-se e tenha grandes possiblidades de<br />
+            realizar seu sonho.<br />
+            <button class="button" type="submit">Cadastrar-se</button>
+        </p>
+    </div>
     <br />
     <br />
     <br />
 
-  
+
+
+    <div class="footer">
+        <br />
+        <br />
+        <div class="row">
+            <div class="column">
+                <div class="p" style="width: 400px">
+                    <br />
+                    <img src="Images/WhatsApp Image 2020-10-18 at 19.39.33.jpeg" />
+                </div>
+            </div>
+            <div class="column">
+                <button class="button2" style="vertical-align:middle"><span>Home </span></button><br />
+                <button class="button2" style="vertical-align:middle"><span>Login</span></button><br />
+                <button class="button2" style="vertical-align:middle"><span>Cadastre-se</span></button>
+            </div>
+
+            <div class="column">
+                <div class="p" style="color: white;font-size:17px; height: 20px ">
+                    <p>
+                        @DPFinanciamentos@hotmail.com<br />
+                        (11) 2222-2222<br />
+                        Seg a Sex 9h às 18h | Sáb das 9h à 13h
+                    </p>
+                </div>
+            </div>
+        </div>
+        <br />
+        <br />
+    </div>
+
+
+
 
 </body>
 </html>
