--- a/Tela de login.html
+++ b/Tela de login.html
@@ -38,17 +38,20 @@
         <form action="#" method="post">
 
             <label for="login-email">Email</label>
-            <input type="email" id="login-email" placeholder="e-Mail" required /><br />
+            <input type="email" id="login-email" required /><br />
 
             <label for="login-password">Password</label>
-            <input type="password" id="login-password" placeholder="Password" required /><br />
+            <input type="password" id="login-password" required /><br />
             <br />
 
             <div  class="g-recaptcha" data-sitekey="6LfrLM0ZAAAAAGy5FQ2F_ftPd4dv5j1UNUeTRfXz"></div>
             <br />
+            <a href="#" style="color: black;">Esqueci minha senha</a>
+            <br />
+            <br />
 
-            <button class="button" type="submit">Voltar</button>
-            <button class="button" type="submit">Confirmar</button>
+            <button style="width: 150px" class="button" type="submit">Voltar</button>
+            <button style="width: 150px" class="button" type="submit">Confirmar</button>
             <br />
             <br />
             <br />
