--- a/Tela de ajuda.html
+++ b/Tela de ajuda.html
@@ -7,6 +7,15 @@
     <link href="styles/telasPag.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
+
+    <div class="menu">
+        <a href="#">Home</a>
+        <a href="Tela acompanhamento.html">Acompanhamento</a>
+        <a href="#">Financiamento</a>
+        <a href="#">Simulação</a>
+        <a href="#">Ajuda</a>
+    </div>
+
     <h1>Informações</h1>
 
     <p>
