--- a/Tela de quitar financiamento.html
+++ b/Tela de quitar financiamento.html
@@ -6,21 +6,32 @@
     <link href="styles/telasPag.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
+
+    <div class="menu">
+        <a href="#">Home</a>
+        <a href="Tela acompanhamento.html">Acompanhamento</a>
+        <a href="#">Financiamento</a>
+        <a href="#">Simulação</a>
+        <a href="#">Ajuda</a>
+    </div>
+
     <h1>Quitar Financiamento</h1>
 
     <p> Texto com informações mostrando o valor restante a se pagar no financiamento!...</p>
     <!--aqui entrara os valores quando criar o código-->
     <p>Mostrando também o deconto gerado em cima do valor restante do financiamento.</p>
+    <textarea></textarea>
     <!--Aqui o desconto-->
     <p>Termos e condições</p>
     <!--Pensar em como por-->
+    <textarea style=" width: 40%; height: 78px;"></textarea><br />
 
-    <input type="checkbox" id="Checkbox" name="Checkbox" required />
-    <label for="checkbox">Aceito termos e condições</label><br /><br />
+    <input style="width:460px; width: 400px;" type="checkbox" id="Checkbox" name="Checkbox" required />
+    <label for="checkbox">Aceito termos e condições</label>
 
-    <input type="button" value="Gerar Boleto" />
-    <br /><br />
-    <input type="button" value="Imprimir Boleto" />
+
+    <button class="button" style="width: 200px" type="submit">Gerar boleto</button>
+    <button class="button" style="width: 200px" type="submit">Imprimir Boleto</button>
 
 </body>
 </html>
