--- a/Tela de recuperação.html
+++ b/Tela de recuperação.html
@@ -6,6 +6,15 @@
     <link href="styles/telasPag.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
+
+    <div class="menu">
+        <a href="#">Home</a>
+        <a href="Tela acompanhamento.html">Acompanhamento</a>
+        <a href="#">Financiamento</a>
+        <a href="#">Simulação</a>
+        <a href="#">Ajuda</a>
+    </div>
+
     <h1>Recuperação de senha</h1>
 
     <p>Um link para alteração de senha será enviado para seu e-mail dentro de 10 segundos a 10 minutos.</p>
