--- a/Tela direcionada a função do boleto.html
+++ b/Tela direcionada a função do boleto.html
@@ -15,6 +15,14 @@
 
 <body>
 
+    <div class="menu">
+        <a href="#">Home</a>
+        <a href="Tela acompanhamento.html">Acompanhamento</a>
+        <a href="#">Financiamento</a>
+        <a href="#">Simulação</a>
+        <a href="#">Ajuda</a>
+    </div>
+
     <ul>
         <li><a href="">Mensalidade</a></li>
         <li><a href="">Antecipação</a></li>
