--- a/Tela renegociação de boleto.html
+++ b/Tela renegociação de boleto.html
@@ -7,21 +7,32 @@
 
 </head>
 <body>
+
+    <div class="menu">
+        <a href="#">Home</a>
+        <a href="Tela acompanhamento.html">Acompanhamento</a>
+        <a href="#">Financiamento</a>
+        <a href="#">Simulação</a>
+        <a href="#">Ajuda</a>
+    </div>
+
     <h1>Renegociar Boleto</h1>
 
 
     <textarea>Texto Informativo</textarea> <br />
     <br />
-    <textarea>Termos e Condições</textarea> <br />
+    <textarea style="width: 40%; height: 150px;">Termos e Condições</textarea> <br />
     <br />
-    <input type="checkbox" name="condicao" value="Aceito" required /> Aceito
-    <input type="button" value="Voltar" /> <br />
+    <p style="font-size:20px">Aceito<input style="width: 30px" type="checkbox" name="condicao" value="Aceito" required /></p>
     <br />
-    <input type="button" value="Gerar Boleto" /><br />
+    <button style="width: 150px" class="button" type="submit">Gerar boleto</button>
+    <br />
+    <br />
 
     <textarea>Boleto..</textarea><br />
-    <input type="button" value="Imprimir Boleto" />
+    <button style="width: 150px" class="button" type="submit">Voltar</button>
+    <button style="width: 150px" class="button" type="submit">Imprimir boleto</button>
     <!--Não editei nada so adicionei a linha abaixo-->
-    <a href="Tela direcionada a função do boleto.html">Voltar</a>
+
 </body>
 </html>
