--- a/Tela antecipar boleto.html
+++ b/Tela antecipar boleto.html
@@ -6,18 +6,28 @@
     <link href="styles/telasPag.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
+
+    <div class="menu">
+        <a href="#">Home</a>
+        <a href="Tela acompanhamento.html">Acompanhamento</a>
+        <a href="#">Financiamento</a>
+        <a href="#">Simulação</a>
+        <a href="#">Ajuda</a>
+    </div>
+
     <h1>Antecipar Boleto</h1>
 
-    <label for="txtParcelas">Parcelas</label><br />
+    <label for="txtParcelas">Números de parcelas que deseja antecipar</label><br />
 
-    <input type="number" id="txtParcelas" name="txtParcelas" placeholder="Número de parcelas" /><br />
+    <input style="border: 2px solid #ccc;background-color: white;width: 60%;padding: 8px 20px;margin: 8px 0;box-sizing: border-box"
+           type="number" id="txtParcelas" name="txtParcelas" placeholder="Número de parcelas" /><br />
 
-    <input type="button" value="Gerar Boleto" /><br />
+    <button style="width: 150px; margin:10px" class="button" type="submit">Gerar Boleto</button><br />
     <br />
 
     <textarea>Boleto..</textarea><br />
 
-    <input type="button" value="Imprimir Boleto" /><br />
+    <button style="width: 150px; margin: 10px" class="button" type="submit">Imprimir Boleto</button><br />
 
 </body>
 </html>
