--- a/Tela de boleto.html
+++ b/Tela de boleto.html
@@ -5,30 +5,35 @@
 <head>
 
     <meta charset="utf-8">
-
     <link rel="stylesheet" type="text/css" href="Style.css"> <!-- Vai chamar o arquivo Style.css -->
     <link href="styles/telasPag.css" type="text/css" rel="stylesheet" />
-
-    <title> Tela boleto </title>
+    <title>Tela boleto</title>
 
 </head>
 
-<body
+<body>
 
-<br>
-<br>
-<br>
-<br>
+    <div class="menu">
+        <a href="#">Home</a>
+        <a href="Tela acompanhamento.html">Acompanhamento</a>
+        <a href="#">Financiamento</a>
+        <a href="#">Simulação</a>
+        <a href="#">Ajuda</a>
+    </div>
 
-<p> Boleto... </p> <br>
+    <h1>Boleto</h1>
 
-<h4> Imprimir boleto </h4>
+    <br />
+    <textarea style="width: 50%; height: 450px;"></textarea>
+    <br />
+    <br />
 
-<h4> Antecipar </h4>
-<h4> Renegociação </h4>
+    <button style="width: 200px" class="button" type="submit">Imprimir boleto</button>
+    <button style="width: 200px" class="button" type="submit">Antecipar</button>
+    <button style="width: 200px" class="button" type="submit">Renegociação</button>
     <!--Não editei nada so adicionei a linha abaixo-->
-<a href="Tela antecipar boleto.html">Antecipar</a>
-<a href="Tela renegociação de boleto.html">Renegociação</a>
+    <a href="Tela antecipar boleto.html"></a>
+    <a href="Tela renegociação de boleto.html"></a>
 
 
 
