--- a/Tela de exibir mais.html
+++ b/Tela de exibir mais.html
@@ -6,38 +6,68 @@
     <link href="styles/telasPag.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
-    <label for="dateVencimento">Vencimento</label><br />
-    <input type="date" id="dateVencimento" name="dateVencimento" placeholder="Aqui aparecerá a data de vencimento do boleto" required /><br />
-    <label for="txtNome">Nome</label><br />
-    <input type="text" id="txtNome" name="txtNome" placeholder="Aqui aparecerá o nome do cliente que solicitou o boleto" required /><br />
 
-    <label for="txtCpf">CPF</label><br />
+    <div class="menu">
+        <a href="#">Home</a>
+        <a href="Tela acompanhamento.html">Acompanhamento</a>
+        <a href="#">Financiamento</a>
+        <a href="#">Simulação</a>
+        <a href="#">Ajuda</a>
+    </div>
+
+    <label for="txtId">Id</label>
+    <input type="text" id="txtId" name="txtId" placeholder="Aqui aparecerá o valor do financiamento" required />
+    <label for="txtNome">Nome</label>
+    <input type="text" id="txtNome" name="txtNome" placeholder="Aqui aparecerá o nome do cliente que solicitou o boleto" required /><br />
+    <label for="txtCpf">CPF</label>
     <input type="text" id="txtCpf" name="txtCpf" placeholder="Aqui aparecerá o valor do financiamento" required /><br />
-    <label for="txtEmail">E-mail</label><br />
+    <label for="txtEmail">E-mail</label>
     <input type="email" id="txtEmail" name="txtEmail" placeholder="Aqui aparecerá o número da parcela" required /><br />
+    <label for="dateNascimento">Data de Nascimento</label>
+    <input type="date" id="dateNascimento" name="dateNascimento" placeholder="Aqui aparecerá o número da parcela" required />
+    <br />
+    <label for="txtTelefone">Telefone</label>
+    <input type="tel" id="txtTelefone" name="txtTelefone" placeholder="Aqui aparecerá o valor do financiamento" required />
+    <label for="txtFinanciamento">Financiamento</label>
+    <input type="text" id="txtFinanciamento" name="txtFinanciamento" required /><br />
+    <label for="txtParcelas">  Parcelas</label>
+    <input type="text" id="txtParcelas" name="txtParcelas" required /><br />
+
+    <label for="dateInicial">  Data Inicial</label>
+    <input type="date" id="dateInicial" name="dateInicial" required /><br />
+    <label for="dateFinal">  Data Final</label>
+    <input type="date" id="dateFinal" name="dateFinal" required /><br />
     <label for="txtMoeda">Moeda</label><br />
     <select id="txtMoeda" name="txtMoeda">
         <option value="txtMoeda">Real</option>
         <option value="txtMoeda">Dólar</option>
         <option value="txtMoeda">Euro</option>
         <option value="txtMoeda">BitCoin</option>
-        <br />
-        <br />
-        <label for="txtId">Id</label>
-        <br />
-        <input type="text" id="txtId" name="txtId" placeholder="Aqui aparecerá o valor do financiamento" required />
-        <br />
-        <label for="dateNascimento">Data de Nascimento</label>
-        <br />
-        <input type="date" id="dateNascimento" name="dateNascimento" placeholder="Aqui aparecerá o número da parcela" required />
-        <br />
+    </select>
+    <br />
+    <br />
+    <label for="txtJuros">  Juros</label>
+    <input type="text" id="txtJuros" name="txtJuros" required /><br />
+    <label for="txtValorTotal">  Valor Total</label>
+    <input type="text" id="txtValorTotal" name="txtValorTotal" required /><br />
 
-        <label for="txtTelefone">Telefone</label>
-        <br />
-        <input type="tel" id="txtTelefone" name="txtTelefone" placeholder="Aqui aparecerá o valor do financiamento" required />
-        <br />
-        <br />
-        <a href="tela acompanhamento.html">Exibir Menos</a>
+    <label for="txtValorParcela">  Valor da Parcela</label>
+    <input type="text" id="txtValorParcela" name="txtValorParcela" required /><br />
+    <label for="dateVencimento">Vencimento</label>
+    <input type="date" id="dateVencimento" name="dateVencimento" placeholder="Aqui aparecerá a data de vencimento do boleto" required /><br />
+    <br /><br />
+    <label for="txt">situação do Financiamento Ex: Análise</label><br />
+    <!--situação do Financiamento Ex: Análise-->
+    <br /><br />
+    <label for="txt">Status do financiamento Ex: Pagando</label><br />
+    <!--Status do financiamento Ex: Pagando-->
+    <br /><br />
+    <label for="dateSolicitado">Solicitado</label>
+    <input type="date" id="dateSolicitado" name="dateSolicitado" placeholder="Aqui aparecerá a data de solicitação do boleto" required /><br />
+
+
+
+    <a href="tela acompanhamento.html">Exibir Menos</a>
 
 
 </body>
