--- a/Tela de login.html
+++ b/Tela de login.html
@@ -19,7 +19,6 @@
         <a href="Tela menu inicial.html">Home</a>
         <a href="Tela de login.html">Login</a>
         <a href="Tela de cadastro.html">Cadastre-se</a>
-        <a href="#">Contato</a>
         <br />
         <br />
         <br />
@@ -44,14 +43,16 @@
             <input type="password" id="login-password" required /><br />
             <br />
 
-            <div  class="g-recaptcha" data-sitekey="6LfrLM0ZAAAAAGy5FQ2F_ftPd4dv5j1UNUeTRfXz"></div>
-            <br />
-            <a href="#" style="color: black;">Esqueci minha senha</a>
+            <div  style="margin:20px" class="g-recaptcha"  data-sitekey="6LfrLM0ZAAAAAGy5FQ2F_ftPd4dv5j1UNUeTRfXz"></div>
+
+            <a href="#" style="color: black; text-decoration: none; font-size: 15px; margin: 90px">Esqueci minha senha</a>
             <br />
             <br />
 
             <button style="width: 150px" class="button" type="submit">Voltar</button>
+
             <button style="width: 150px" class="button" type="submit">Confirmar</button>
+
             <br />
             <br />
             <br />
